report the state of database schema for GET version
